Refactor; Implement Security Configuration and Authentication
- Refactored ReviewService to handle review creation, update, and deletion with proper authorization checks.
- Enhanced UserService with methods for user creation, update, and retrieval, including validation for unique usernames and emails.
- Introduced SecurityConfig to manage security settings, including authentication and authorization rules.
- Added AuthController for handling user authentication and registration, including JWT support.
- Created various DTOs for Content, Course, Faculty, Lecturer, Review, and User to facilitate data transfer.
- Implemented request DTOs for creating and updating entities, ensuring validation constraints are in place.
- Developed custom exceptions for handling bad requests, duplicate resources, and resource not found scenarios.
- Established a global exception handler to manage and format error responses consistently.
- Added ContentSecurityService to verify content ownership during operations.
- Implemented JpaUserDetailsService for loading user details during authentication.