@@ -1,13 +1,17 @@
 package de.studyshare.studyshare.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import de.studyshare.studyshare.domain.User;
-import de.studyshare.studyshare.domain.UserDTO;
+import de.studyshare.studyshare.dto.entity.UserDTO;
+import de.studyshare.studyshare.dto.request.UserCreateRequest;
+import de.studyshare.studyshare.dto.request.UserUpdateRequest;
+import de.studyshare.studyshare.exception.DuplicateResourceException;
+import de.studyshare.studyshare.exception.ResourceNotFoundException;
 import de.studyshare.studyshare.repository.UserRepository;
 import jakarta.transaction.Transactional;
 
@@ -15,34 +19,99 @@ import jakarta.transaction.Transactional;
 public class UserService {
 
     private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder;
 
-    public UserService(UserRepository userRepository) {
+    public UserService(UserRepository userRepository, PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
+        this.passwordEncoder = passwordEncoder;
     }
 
     @Transactional
-    public List<UserDTO> getUsers() {
+    public List<UserDTO> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(User::toDto)
-                .toList();
+                .map(UserDTO::fromEntity)
+                .collect(Collectors.toList());
     }
 
     @Transactional
-    public List<UserDTO> getUserByUserName(String userName) {
-        return userRepository.findByUserName(userName).stream()
-                .map(User::toDto)
-                .toList();
+    public UserDTO getUserByUsername(String username) {
+        return userRepository.findByUsername(username)
+                .map(UserDTO::fromEntity)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "username", username));
     }
 
-    public ResponseEntity<User> createUser(User user) {
+    @Transactional
+    public UserDTO getUserById(Long id) {
+        return userRepository.findById(id)
+                .map(UserDTO::fromEntity)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "id", id));
+    }
+
+    @Transactional
+    public UserDTO createUser(UserCreateRequest userCreateRequest) {
+        if (userRepository.existsByUsername(userCreateRequest.username())) {
+            throw new DuplicateResourceException("User", "username", userCreateRequest.username());
+        }
+        if (userRepository.existsByEmail(userCreateRequest.email())) {
+            throw new DuplicateResourceException("User", "email", userCreateRequest.email());
+        }
+
+        User user = new User();
+        user.setFirstName(userCreateRequest.firstName());
+        user.setLastName(userCreateRequest.lastName());
+        user.setEmail(userCreateRequest.email());
+        user.setUsername(userCreateRequest.username());
+        user.setPasswordHash(passwordEncoder.encode(userCreateRequest.password()));
+        user.setRole(userCreateRequest.role());
+
         User savedUser = userRepository.save(user);
-        return ResponseEntity.status(HttpStatus.CREATED).body(savedUser);
+        return UserDTO.fromEntity(savedUser);
     }
 
-    public ResponseEntity<?> deleteUser(Long id) {
-        return userRepository.findById(id).map(user -> {
-            userRepository.delete(user);
-            return ResponseEntity.noContent().build();
-        }).orElseGet(() -> ResponseEntity.notFound().build());
+    @Transactional
+    public UserDTO updateUser(Long id, UserUpdateRequest userUpdateRequest) {
+        User user = userRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "id", id));
+
+        if (userUpdateRequest.firstName() != null) {
+            user.setFirstName(userUpdateRequest.firstName());
+        }
+        if (userUpdateRequest.lastName() != null) {
+            user.setLastName(userUpdateRequest.lastName());
+        }
+        if (userUpdateRequest.email() != null) {
+
+            if (!user.getEmail().equals(userUpdateRequest.email()) && userRepository.existsByEmail(userUpdateRequest.email())) {
+                throw new DuplicateResourceException("User", "email", userUpdateRequest.email());
+            }
+            user.setEmail(userUpdateRequest.email());
+        }
+        if (userUpdateRequest.role() != null) {
+            user.setRole(userUpdateRequest.role());
+        }
+
+        User updatedUser = userRepository.save(user);
+        return UserDTO.fromEntity(updatedUser);
+    }
+
+    @Transactional
+    public void deleteUser(Long id) {
+        if (!userRepository.existsById(id)) {
+            throw new ResourceNotFoundException("User", "id", id);
+        }
+        userRepository.deleteById(id);
+    }
+
+    public boolean existsByUsername(String username) {
+        return userRepository.existsByUsername(username);
+    }
+
+    public boolean existsByEmail(String email) {
+        return userRepository.existsByEmail(email);
+    }
+
+    public User getInternalUserByUsername(String username) {
+        return userRepository.findByUsername(username)
+                .orElseThrow(() -> new ResourceNotFoundException("User", "username", username));
     }
 }
